--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/luxon": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
